syntax = "proto3";

package nexusai.v1;

option go_package = "nexus/proto/nexusai/v1;nexusai";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

service AnalyzerService {
  rpc Track(TrackRequest) returns (TrackResponse);
  rpc Analyze(AnalyzeRequest) returns (AnalyzeResponse);
  rpc GetTodayTrack(TodayTrackRequest) returns (TodayTrackResponse);
  rpc GetLastAnalyses(LastAnalysesRequest) returns (LastAnalysesResponse);
  rpc GetMyProfile(GetMyProfileRequest) returns (GetMyProfileResponse);
  rpc UpdateMyProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
  rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse);
  rpc GetUserLastAnalyses(GetUserLastAnalysesRequest) returns (LastAnalysesResponse);
  rpc SearchUsers(SearchUsersRequest) returns (SearchUsersResponse);
  rpc ListFriends(ListFriendsRequest) returns (ListFriendsResponse);
  rpc ListFriendRequests(ListFriendRequestsRequest) returns (ListFriendRequestsResponse);
  rpc SendFriendRequest(SendFriendRequestRequest) returns (SendFriendRequestResponse);
  rpc RespondFriendRequest(RespondFriendRequestRequest) returns (RespondFriendRequestResponse);
}

message TrackRequest {
  string user_tz = 1;
  repeated TrackPoint points = 2;
}

message TrackResponse {
  int32 stored = 1;
}

message TodayTrackRequest {
  string user_tz = 1;
}

message TodayTrackResponse {
  TrackPoint point = 1;
  bool exists = 2;
}

enum Period {
  PERIOD_UNSPECIFIED = 0;
  PERIOD_DAY = 1;
  PERIOD_WEEK = 2;
  PERIOD_MONTH = 3;
  PERIOD_ALL = 4;
}

message AnalyzeRequest {
  string user_tz = 1;
  string week_starts = 2;
  Constraints constraints = 3;
  Period period = 4;
}

message TrackPoint {
  google.protobuf.Timestamp ts = 1;
  double sleep_hours = 2;
  string sleep_start = 14;
  string sleep_end = 15;
  double mood = 3;
  double activity = 4;
  double productive = 5;
  double stress = 6;
  double energy = 7;
  double concentration = 8;
  double sleep_quality = 9;
  bool caffeine = 10;
  bool alcohol = 11;
  bool workout = 12;
  string llm_text = 13;
  string analysis_status = 16;
}

message UserProfile {
  int32 user_id = 1;
  string name = 2;
  string email = 3;
  string emoji = 4;
  int32 bg_index = 5;
  bool is_friend = 6;
}

message FriendRequest {
  int64 id = 1;
  UserProfile from = 2;
  UserProfile to = 3;
  string status = 4;
  google.protobuf.Timestamp created_at = 5;
}

message GetMyProfileRequest {}
message GetMyProfileResponse { UserProfile profile = 1; }

message GetUserProfileRequest { int32 user_id = 1; }
message GetUserProfileResponse { UserProfile profile = 1; }

message GetUserLastAnalysesRequest { int32 user_id = 1; }

message UpdateProfileRequest {
  string emoji = 1;
  int32 bg_index = 2;
}
message UpdateProfileResponse { UserProfile profile = 1; }

message SearchUsersRequest { string query = 1; }
message SearchUsersResponse { repeated UserProfile users = 1; }

message ListFriendsRequest {}
message ListFriendsResponse { repeated UserProfile friends = 1; }

message ListFriendRequestsRequest { string status = 1; }
message ListFriendRequestsResponse { repeated FriendRequest requests = 1; }

message SendFriendRequestRequest { int32 to_user_id = 1; }
message SendFriendRequestResponse { FriendRequest request = 1; }

message RespondFriendRequestRequest {
  int64 request_id = 1;
  string action = 2; // accept | decline
}
message RespondFriendRequestResponse { bool ok = 1; }

message Constraints {
  int32 work_start_hour = 1;
  int32 work_end_hour = 2;
}

message AnalyzeResponse {
  map<string, double> energy_by_weekday = 1;
  ProductivityModel productivity_model = 2;
  BurnoutRisk burnout_risk = 3;
  OptimalSchedule optimal_schedule = 4;
  string llm_insight = 5;
  google.protobuf.Struct debug = 6;
}

message LastAnalysesRequest {}

message LastAnalysesResponse {
  repeated LastAnalysisEntry entries = 1;
}

message LastAnalysisEntry {
  string period = 1;
  AnalyzeResponse response = 2;
  google.protobuf.Timestamp updated_at = 3;
}

message ProductivityModel {
  map<string, double> weights = 1;
  double score = 2;
}

message BurnoutRisk {
  double score = 1;
  string level = 2;
  repeated string reasons = 3;
  int32 prediction_horizon_days = 4;
}

message OptimalSchedule {
  string suggested_sleep_window = 1;
  repeated string best_focus_hours = 2;
  repeated string best_light_tasks_hours = 3;
  repeated string recovery_tips = 4;
}
